# themoviesearch

./: .gitignore  Pipfile  Procfile  pyproject.toml  requirements.txt
tms/: __init__.py  details.py  index.py  search.py
tms/static/: style.css
tms/templates/: base.html  details.html  header.html  index.html  search.html
