[project]
dependencies = [
    "requests>=2.27.1",
    "gunicorn>=20.1.0",
    "flask>=2.1.2",
]
requires-python = ">=3.9"
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "pylint>=2.13.9",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
